# memomed

./: LICENSE  README.md  start-backend.sh  start-frontend.sh
.trae/documents/: chat-enhancement-plan.md
.trae/rules/: personal-rules.md
.trae/skills/sft-data-generator/: SKILL.md
.trae/skills/sft-data-generator/evals/: evals.json
backend/: .gitignore  alembic.ini  langgraph.json  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 1d66cfee37bc_add_patient_name_to_patients.py  2ccc2d34255b_update_embedding_column_to_use_vector_.py  a37811822173_make_report_id_nullable_in_report_.py  ad1d38f25555_rename_user_id_to_patient_id_in_medical_.py  b82b49bf51ab_update_embedding_column_to_use_vector_.py  c1f3e4a0d5b2_phase1_add_patients_and_report_metadata.py  d504d0db5e6f_create_medical_reports_and_report_.py  e7b6c2a1f4d3_add_patient_type_and_legal_name.py  f2c9b8d4a6e1_relax_patient_code_unique_constraint.py
backend/app/: db.py  main.py  settings.py
backend/app/agent/: graph.py
backend/app/agent/utils/: hitl.py  llm.py  nodes.py  rag.py  state.py  tools.py
backend/app/models/: models.py
backend/data/: Trainingdata.jsonl
backend/test/: checkpoint_setup.py  install_pgvector.sql  test_agent_async.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/app/: globals.css  page.tsx
frontend/src/app/api/chat/: route.ts
vibe/: AGENT_SPEC.md  CHAT_SUMMARY.md  DEV_SPEC.md  LANGGRAPH_CLI_ANALYZE.md  LEARN.md
