[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.8",
    "langchain>=1.2.12",
    "langchain-openai>=1.1.0",
    "langgraph>=1.1.0",
    "langgraph-cli[inmem]>=0.4.19",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.1",
    "uvicorn>=0.39.0",
]
