[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.8",
    "langchain>=1.2.12",
    "langchain-openai>=1.1.0",
    "langchain-anthropic>=0.1.0",
    "langchain-community>=0.4.0",
    "langgraph>=1.1.0",
    "langgraph-cli[inmem]>=0.4.19",
    "langgraph-checkpoint-postgres>=3.0.0",
    "psycopg2-binary>=2.9.9",
    "psycopg[binary]>=3.3.0",
    "pgvector>=0.1.22",
    "langchain-text-splitters>=0.2.0",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.1",
    "uvicorn>=0.39.0",
    "psycopg-pool>=3.3.0",
    "alembic>=1.18.4",
    "langchain-postgres>=0.0.17",
    "dashscope>=1.25.14",
]
